# Nar-

./: .gitignore  AGENTS.md  README.md  fix_permissions.sh  launcher.command  niro.code-workspace  pytest.ini
.github/: Untitled-1  copilot-instructions.md
archive/: backend-app.py.20251015  frontend-src-api.ts.20251015  root-uvicorn-out-20251015
atlas/: muster.md  principles.md
backend/: .uvicorn.out  app.py  app.py.bak  app.py.bak.20250824_013153  dev.sh  pytest.ini  requirements.txt
backend./: .dockerignore  Makefile  app.py  dev.sh  memory_ltm.py  pyproject.toml
backend./app/: logging_json.py  schemas.py
backend./app/routes/: __init__.py  chat.py
backend./app/services/: openai.py
desktop/: electron-main.ts  niro-chat-desktop-0.1.0.tgz  package.json  preload.ts  tsconfig.json
frontend/: components.json  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend./: package-lock.json  vite.config.ts
logs/: build-2025-10-15.md  status-2025-10-15.md  status-2025-12-27.md  ui-activity-20251015.jsonl  ui-activity-20251015.md  ui-activity-20251021.jsonl
scripts/: phi_runner.py  report_ui_activity.py
system/: docs_manifest.tsv  feeds.yaml  modules.yaml  policy.md  principles.md  ϕ-first-run.sh  ϕaaret-El.bak_20250814_030413
zettel/: Analysevoralge.pages  DIE 7 AUFGABEN.rtf  Einschreiben (AgenturfürArtbeit, Jobcenter, Jugendamt).pages  Logik - ein Plädoyer für die alten Logien .docx  Logik Notizen.pages  Losdemokratie Podcast zusammenfassung.pages  MEIN WEG.pages  Ohne Titel 4.pages  Ohne Titel 5.pages  Ohne Titel 6.pages  (+6 more)
(+128 files in other folders)
