[project]
name = "niro-chat-app-backend"
version = "0.0.0"
description = "Backend service for the niro chat application"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.2",
    "uvicorn[standard]==0.30.6",
    "requests==2.32.3",
    "pydantic==2.9.2",
    "httpx==0.27.2",
    "pytest==8.3.3",
    "pytest-asyncio==0.23.7",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    "error::DeprecationWarning"
]

